--- a/app/src/main/res/layout/fragment_backpack.xml
+++ b/app/src/main/res/layout/fragment_backpack.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="backpackViewModel"
-            type="be.hogent.faith.faith.backpackScreen.BackpackViewModel" />
+            type="be.hogent.faith.faith.backpack.BackpackViewModel" />
         <import type="android.view.View" />
     </data>
 
