--- a/app/src/main/res/layout/fragment_skyscraper_start.xml
+++ b/app/src/main/res/layout/fragment_skyscraper_start.xml
@@ -28,11 +28,17 @@
             android:id="@+id/skyscraper_rv"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="100dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="64dp"
+            android:layout_marginBottom="64dp"
+            android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/btn_skyscraper_return"
-            app:layout_constraintTop_toBottomOf="@+id/btn_skyscraper_return" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_skyscraper_return"
+            tools:itemCount="5"
+            tools:listitem="@layout/skyscraper_rv_green" />
 
         <ImageButton
             android:id="@+id/btn_skyscraper_history"
