--- a/app/src/main/res/layout/skyscraper_rv_red.xml
+++ b/app/src/main/res/layout/skyscraper_rv_red.xml
@@ -29,7 +29,7 @@
         <EditText
             android:id="@+id/txt_goal_description"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:autofillHints="Doelbeschrijving"
             android:elevation="1dp"
@@ -59,9 +59,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/skyscraper_panel"
             app:layout_constraintVertical_bias="1.0"
-            app:srcCompat="@drawable/skyscraper_green_rv" />
+            app:srcCompat="@drawable/skyscraper_red_rv" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 </layout>
