fix skyscraper layouts not fully showing

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -266,5 +266,27 @@
         <item name="android:textSize">25sp</item>
     </style>
 
+    <style name="skyscraper_panel_text">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">16dp</item>
+        <item name="android:inputType">textMultiLine</item>
+        <item name="android:outlineProvider">none</item>
+        <item name="android:translationZ">10dp</item>
+    </style>
+
+    <style name="skyscraper_panel">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:translationZ">1dp</item>
+        <item name="android:foregroundGravity">center</item>
+        <item name="android:scaleType">fitXY</item>
+    </style>
+
+    <style name="skyscraper_container">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_marginBottom">22dp</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
 
 </resources>
