--- a/app/src/main/res/layout/fragment_skyscraper_start.xml
+++ b/app/src/main/res/layout/fragment_skyscraper_start.xml
@@ -33,6 +33,7 @@
             android:layout_marginEnd="64dp"
             android:layout_marginBottom="64dp"
             android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
