--- a/app/src/main/res/layout/skyscraper_rv_green.xml
+++ b/app/src/main/res/layout/skyscraper_rv_green.xml
@@ -1,24 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-    </data>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+    <androidx.constraintlayout.widget.ConstraintLayout style="@style/skyscraper_container">
 
         <ImageView
             android:id="@+id/skyscraper_panel"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:translationZ="1dp"
-            android:foregroundGravity="center"
-            android:scaleType="fitXY"
+            style="@style/skyscraper_panel"
             app:layout_constraintBottom_toTopOf="@+id/negativemargin"
             app:layout_constraintEnd_toEndOf="@+id/skyscraper_base"
             app:layout_constraintStart_toStartOf="@+id/skyscraper_base"
@@ -28,27 +17,21 @@
 
         <EditText
             android:id="@+id/txt_goal_description"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_margin="16dp"
-            android:autofillHints="Doelbeschrijving"
-            android:elevation="1dp"
-            tools:text="BESCHRIJVING DOEL"
-            android:inputType="textMultiLine"
+            style="@style/skyscraper_panel_text"
             app:layout_constraintBottom_toBottomOf="@id/skyscraper_panel"
             app:layout_constraintEnd_toEndOf="@id/skyscraper_panel"
             app:layout_constraintStart_toStartOf="@id/skyscraper_panel"
-            app:layout_constraintTop_toTopOf="@id/skyscraper_panel" />
-
+            app:layout_constraintTop_toTopOf="@id/skyscraper_panel"
+            tools:text="BESCHRIJVING DOEL" />
 
         <View
             android:id="@+id/negativemargin"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="52dp"
-            app:layout_constraintTop_toTopOf="@id/skyscraper_base"
+            app:layout_constraintEnd_toEndOf="@id/skyscraper_panel"
             app:layout_constraintStart_toStartOf="@id/skyscraper_panel"
-            app:layout_constraintEnd_toEndOf="@id/skyscraper_panel"/>
+            app:layout_constraintTop_toTopOf="@id/skyscraper_base" />
 
         <ImageView
             android:id="@+id/skyscraper_base"
