--- a/app/src/main/res/layout/fragment_skyscraper_goal.xml
+++ b/app/src/main/res/layout/fragment_skyscraper_goal.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
+        <variable
+            name="goalViewModel"
+            type="be.hogent.faith.faith.skyscraper.goal.GoalViewModel" />
+
+        <import type="android.view.View" />
     </data>
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/skyscraper_create_goal"
@@ -22,8 +27,10 @@
             android:layout_marginTop="@dimen/margin_corner_button"
             android:background="@drawable/ic_return"
             android:contentDescription="@string/cancel"
+            android:onClick="@{() -> goalViewModel.onCancelButtonClicked()}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
 
         <ImageButton
             android:id="@+id/btn_save_goal"
@@ -33,6 +40,7 @@
             android:layout_marginEnd="@dimen/margin_corner_button"
             android:background="@drawable/save_btn"
             android:contentDescription="@string/ok"
+            android:onClick="@{() -> goalViewModel.onSaveButtonClicked()}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -42,10 +50,10 @@
             android:layout_marginTop="100dp"
             android:layout_marginEnd="100dp"
             android:background="@drawable/touw"
-            app:layout_constraintStart_toStartOf="@+id/guide_rope"
+            app:layout_constraintBottom_toBottomOf="@+id/guide_cellar_top"
             app:layout_constraintEnd_toEndOf="@+id/guide_rope"
-            app:layout_constraintTop_toTopOf="@+id/guide_roof_end"
-            app:layout_constraintBottom_toBottomOf="@+id/guide_cellar_top">
+            app:layout_constraintStart_toStartOf="@+id/guide_rope"
+            app:layout_constraintTop_toTopOf="@+id/guide_roof_end">
 
             <androidx.appcompat.widget.AppCompatSeekBar
                 android:id="@+id/seekbar"
@@ -63,12 +71,11 @@
             layout="@layout/skyscraper_avatar_drag_drop"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            app:goalViewModel="@{goalViewModel}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guide_skyscraper_end"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_skyscraper_return" />
-
-
 
         <EditText
             android:id="@+id/skyscraper_goal_description"
@@ -78,11 +85,12 @@
             android:background="@drawable/skyscraper_panel_blue"
             android:gravity="center"
             android:hint="Beschrijving doel"
+            android:inputType="text"
+            android:text="@{goalViewModel.goal.description}"
             app:layout_constraintBottom_toTopOf="@+id/guide_panel_bottom"
             app:layout_constraintEnd_toStartOf="@+id/guide_panel"
             app:layout_constraintStart_toEndOf="@+id/skyscraper_avatar_drag_drop"
-            app:layout_constraintTop_toTopOf="parent"
-            android:inputType="text" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide_panel"
@@ -91,7 +99,6 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.81" />
 
-
         <LinearLayout
             android:id="@+id/rv_actions_container"
             android:layout_width="0dp"
@@ -99,6 +106,7 @@
             android:layout_marginBottom="16dp"
             android:background="@drawable/rectangle_white"
             android:orientation="vertical"
+            android:visibility="@{(goalViewModel.selectedSubGoal == null)? View.GONE : View.VISIBLE }"
             app:layout_constraintBottom_toBottomOf="@+id/skyscraper_avatar_drag_drop"
             app:layout_constraintEnd_toStartOf="@+id/guide_panel"
             app:layout_constraintStart_toEndOf="@+id/skyscraper_avatar_drag_drop"
@@ -109,7 +117,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="16dp"
-                android:text="Beschrijving subdoel"
+                android:text="@={goalViewModel.selectedSubGoalDescription}"
                 android:textColor="#0000FF"
                 android:textSize="20sp" />
 
@@ -127,6 +135,8 @@
             android:layout_marginEnd="@dimen/margin_corner_button"
             android:layout_marginBottom="@dimen/margin_corner_button"
             android:background="@drawable/ic_actie_toevoegen"
+            android:onClick="@{() -> goalViewModel.addNewAction()}"
+            android:visibility="@{(goalViewModel.selectedSubGoal == null)? View.GONE : View.VISIBLE }"
             app:layout_constraintBottom_toBottomOf="@+id/rv_actions_container"
             app:layout_constraintEnd_toEndOf="@+id/rv_actions_container" />
 
