--- a/app/src/main/res/layout/skyscraper_avatar_drag_drop.xml
+++ b/app/src/main/res/layout/skyscraper_avatar_drag_drop.xml
@@ -5,6 +5,9 @@
 
     <data>
 
+        <variable
+            name="goalViewModel"
+            type="be.hogent.faith.faith.skyscraper.goal.GoalViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,130 +26,130 @@
             android:id="@+id/avatar_pos_stairs_1"
             android:layout_width="50dp"
             android:layout_height="65dp"
+            android:contentDescription="@string/your_avatar"
             android:tag="@string/your_avatar"
             app:layout_constraintBottom_toTopOf="@+id/guide_pos_1"
             app:layout_constraintEnd_toStartOf="@+id/guide_stairs_end"
-            app:srcCompat="@drawable/empty_shape"
-            android:contentDescription="@string/your_avatar"/>
+            app:srcCompat="@drawable/empty_shape" />
 
         <ImageView
             android:id="@+id/avatar_pos_stairs_2"
             android:layout_width="50dp"
             android:layout_height="65dp"
+            android:contentDescription="@string/your_avatar"
             android:tag="@string/your_avatar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guide_pos_1"
-            app:srcCompat="@drawable/empty_shape"
-            android:contentDescription="@string/your_avatar"/>
+            app:srcCompat="@drawable/empty_shape" />
 
         <ImageView
             android:id="@+id/avatar_pos_stairs_3"
             android:layout_width="50dp"
             android:layout_height="65dp"
+            android:contentDescription="@string/your_avatar"
             android:tag="@string/your_avatar"
             app:layout_columnSpan="2"
             app:layout_constraintBottom_toTopOf="@+id/guide_pos_2"
             app:layout_constraintEnd_toStartOf="@+id/guide_stairs_end"
             app:layout_gravity="end"
-            app:srcCompat="@drawable/empty_shape"
-            android:contentDescription="@string/your_avatar"/>
+            app:srcCompat="@drawable/empty_shape" />
 
         <ImageView
             android:id="@+id/avatar_pos_stairs_4"
             android:layout_width="50dp"
             android:layout_height="60dp"
+            android:contentDescription="@string/your_avatar"
             android:tag="@string/your_avatar"
             app:layout_columnSpan="2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guide_pos_2"
-            app:srcCompat="@drawable/empty_shape"
-            android:contentDescription="@string/your_avatar"/>
+            app:srcCompat="@drawable/empty_shape" />
 
         <ImageView
             android:id="@+id/avatar_pos_stairs_5"
             android:layout_width="50dp"
             android:layout_height="60dp"
+            android:contentDescription="@string/your_avatar"
             android:tag="@string/your_avatar"
             app:layout_columnSpan="2"
             app:layout_constraintBottom_toTopOf="@+id/guide_pos_3"
             app:layout_constraintEnd_toStartOf="@+id/guide_stairs_end"
             app:layout_gravity="end"
-            app:srcCompat="@drawable/empty_shape"
-            android:contentDescription="@string/your_avatar"/>
+            app:srcCompat="@drawable/empty_shape" />
 
         <ImageView
             android:id="@+id/avatar_pos_stairs_6"
             android:layout_width="50dp"
             android:layout_height="60dp"
+            android:contentDescription="@string/your_avatar"
             android:tag="@string/your_avatar"
             app:layout_columnSpan="2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guide_pos_3"
-            app:srcCompat="@drawable/empty_shape"
-            android:contentDescription="@string/your_avatar"/>
+            app:srcCompat="@drawable/empty_shape" />
 
         <ImageView
             android:id="@+id/avatar_pos_stairs_7"
             android:layout_width="50dp"
             android:layout_height="60dp"
+            android:contentDescription="@string/your_avatar"
             android:tag="@string/your_avatar"
             app:layout_columnSpan="2"
-            app:layout_constraintBottom_toTopOf="@+id/guide_pos_4"
 
+            app:layout_constraintBottom_toTopOf="@+id/guide_pos_4"
             app:layout_constraintEnd_toStartOf="@+id/guide_stairs_end"
             app:layout_gravity="end"
-            app:srcCompat="@drawable/empty_shape"
-            android:contentDescription="@string/your_avatar"/>
+            app:srcCompat="@drawable/empty_shape" />
 
         <ImageView
             android:id="@+id/avatar_pos_stairs_8"
             android:layout_width="50dp"
             android:layout_height="60dp"
+            android:contentDescription="@string/your_avatar"
             android:tag="@string/your_avatar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guide_pos_4"
-            app:srcCompat="@drawable/empty_shape"
-            android:contentDescription="@string/your_avatar"/>
+            app:srcCompat="@drawable/empty_shape" />
 
         <ImageView
             android:id="@+id/avatar_pos_stairs_9"
             android:layout_width="50dp"
             android:layout_height="60dp"
+            android:contentDescription="@string/your_avatar"
             android:tag="@string/your_avatar"
             app:layout_constraintBottom_toTopOf="@+id/guide_pos_5"
             app:layout_constraintEnd_toStartOf="@+id/guide_stairs_end"
-            app:srcCompat="@drawable/empty_shape"
-            android:contentDescription="@string/your_avatar"/>
+            app:srcCompat="@drawable/empty_shape" />
 
         <ImageView
             android:id="@+id/avatar_pos_stairs_10"
             android:layout_width="50dp"
             android:layout_height="60dp"
+            android:contentDescription="@string/your_avatar"
             android:tag="@string/your_avatar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guide_pos_5"
-            app:srcCompat="@drawable/empty_shape"
-            android:contentDescription="@string/your_avatar"/>
+            app:srcCompat="@drawable/empty_shape" />
 
         <ImageView
             android:id="@+id/avatar_pos_stairs_11"
             android:layout_width="50dp"
             android:layout_height="60dp"
+            android:contentDescription="@string/your_avatar"
             android:tag="@string/your_avatar"
             app:layout_constraintBottom_toTopOf="@+id/guide_pos_6"
             app:layout_constraintEnd_toStartOf="@+id/guide_stairs_end"
-            app:srcCompat="@drawable/empty_shape"
-            android:contentDescription="@string/your_avatar"/>
+            app:srcCompat="@drawable/empty_shape" />
 
         <ImageView
             android:id="@+id/avatar_pos_stairs_12"
             android:layout_width="50dp"
             android:layout_height="60dp"
+            android:contentDescription="@string/your_avatar"
             android:tag="@string/your_avatar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guide_pos_6"
-            app:srcCompat="@drawable/empty_shape"
-            android:contentDescription="@string/your_avatar" />
+            app:srcCompat="@drawable/empty_shape" />
 
         <ImageView
             android:id="@+id/avatar_pos_lift_1"
@@ -159,6 +162,7 @@
             app:layout_constraintStart_toStartOf="@+id/guide_lift_start"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/empty_shape" />
+
         <ImageView
             android:id="@+id/avatar_pos_lift_2"
             android:layout_width="50dp"
@@ -329,7 +333,7 @@
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="button"
             app:layout_constraintEnd_toStartOf="@+id/guide_rope_start"
             app:layout_constraintStart_toStartOf="@+id/guide_lift_end"
             app:layout_constraintTop_toTopOf="@+id/guide_stairs_top" />
@@ -338,7 +342,8 @@
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:onClick="@{() -> goalViewModel.onSelectSubGoal(0)}"
+            android:text="@{goalViewModel.subgoals.get(0) != null ?  goalViewModel.subgoals.get(0).description :  @string/empty}"
             app:layout_constraintEnd_toStartOf="@+id/guide_rope_start"
             app:layout_constraintStart_toStartOf="@+id/guide_lift_end"
             app:layout_constraintTop_toTopOf="@+id/guide_pos_1" />
@@ -347,7 +352,8 @@
             android:id="@+id/button3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="@{goalViewModel.subgoals.get(1) != null ?  goalViewModel.subgoals.get(1).description:  @string/empty }"
+            android:onClick="@{() -> goalViewModel.onSelectSubGoal(1)}"
             app:layout_constraintBottom_toTopOf="@+id/guide_pos_2"
             app:layout_constraintEnd_toStartOf="@+id/guide_rope_start"
             app:layout_constraintStart_toStartOf="@+id/guide_lift_end" />
@@ -356,7 +362,8 @@
             android:id="@+id/button4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="@{goalViewModel.subgoals.get(2) != null ?  goalViewModel.subgoals.get(2).description :  @string/empty}"
+            android:onClick="@{() -> goalViewModel.onSelectSubGoal(2)}"
             app:layout_constraintEnd_toStartOf="@+id/guide_rope_start"
             app:layout_constraintStart_toStartOf="@+id/guide_lift_end"
             app:layout_constraintTop_toTopOf="@+id/guide_pos_2" />
@@ -365,7 +372,8 @@
             android:id="@+id/button5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="@{goalViewModel.subgoals.get(3) != null ?  goalViewModel.subgoals.get(3).description :  @string/empty}"
+            android:onClick="@{() -> goalViewModel.onSelectSubGoal(3)}"
             app:layout_constraintBottom_toTopOf="@+id/guide_pos_3"
             app:layout_constraintEnd_toStartOf="@+id/guide_rope_start"
             app:layout_constraintStart_toStartOf="@+id/guide_lift_end" />
