--- a/app/src/main/res/layout/subgoal_rv_item.xml
+++ b/app/src/main/res/layout/subgoal_rv_item.xml
@@ -8,7 +8,7 @@
         android:id="@+id/subgoal_description"
         android:gravity="center_vertical"
         android:textSize="20sp"
-        android:textColor="#0000FF"
+        android:textColor="@color/color_white"
         android:textStyle="bold"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="8dp"
